Revert "swagger request and response objects"
This reverts commit 354434dc5413f77b495245a0f8aa81e5999f04db.
