# backend/src/main/java/tech/geocodeapp/geocode/User/Controller/UserApi.java
@@ -19,6 +19,7 @@ import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
+import tech.geocodeapp.geocode.User.Response.GetFoundCollectablesResponse;
 import tech.geocodeapp.geocode.User.Response.GetFoundGeoCodesResponse;
 import tech.geocodeapp.geocode.User.Model.User;
 import tech.geocodeapp.geocode.User.Request.*;
@@ -80,18 +81,18 @@ public interface UserApi {
             method = RequestMethod.POST)
     ResponseEntity<UpdateLocationResponse> updateLocation(@Parameter(in = ParameterIn.DEFAULT, description = "Request to update the location of the user's trackable", required=true, schema=@Schema()) @Valid @RequestBody UpdateLocationRequest body);
 
+    @Operation(summary = "Gets the Collectables that the user has ever found", description = "Get a user's found Collectables", security = {
+        @SecurityRequirement(name = "bearerAuth")    }, tags={ "User" })
+    @ApiResponses(value = { 
+        @ApiResponse(responseCode = "200", description = "Successfully returned the user's found collectables", content = @Content(mediaType = "application/json", schema = @Schema(implementation = GetFoundCollectablesResponse.class))),
+        
+        @ApiResponse(responseCode = "401", description = "Invalid JWT token") })
+    @RequestMapping(value = "/User/getFoundCollectables",
+        produces = { "application/json", "application/xml" }, 
+        consumes = { "application/json", "application/xml" }, 
+        method = RequestMethod.POST)
+    ResponseEntity<GetFoundCollectablesResponse> getFoundCollectables(@Parameter(in = ParameterIn.DEFAULT, description = "Request to get the user's found Collectables", required = true, schema = @Schema()) @Valid @RequestBody GetFoundCollectablesRequest body);
 
-    @Operation(summary = "Gets the Collectable Types that the user has ever found", description = "Get a user's found Collectable Types", security = {
-            @SecurityRequirement(name = "bearerAuth")    }, tags={ "User" })
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Successfully returned the user's found collectables", content = @Content(mediaType = "application/json", schema = @Schema(implementation = GetFoundCollectableTypesResponse.class))),
-
-            @ApiResponse(responseCode = "401", description = "Invalid JWT token") })
-    @RequestMapping(value = "/User/getFoundCollectableTypes",
-            produces = { "application/json", "application/xml" },
-            consumes = { "application/json", "application/xml" },
-            method = RequestMethod.POST)
-    ResponseEntity<GetFoundCollectableTypesResponse> getFoundCollectableTypes(@Parameter(in = ParameterIn.DEFAULT, description = "Request to get the IDs of the user's found Collectable Types", required=true, schema=@Schema()) @Valid @RequestBody GetFoundCollectableTypesRequest body);
 
     @Operation(summary = "Gets the GeoCodes that the user has ever found", description = "Gets the user's found GeoCodes", security = {
         @SecurityRequirement(name = "bearerAuth")    }, tags={ "User" })
