# backend/src/main/java/tech/geocodeapp/geocode/User/Response/GetFoundGeoCodesResponse.java
@@ -2,52 +2,50 @@ package tech.geocodeapp.geocode.User.Response;
 
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
+import tech.geocodeapp.geocode.GeoCode.Model.GeoCode;
 import io.swagger.v3.oas.annotations.media.Schema;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.UUID;
 import org.springframework.validation.annotation.Validated;
 import javax.validation.Valid;
-import javax.validation.constraints.*;
 
 /**
  * GetFoundGeoCodesResponse
  */
 @Validated
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2021-06-24T10:12:19.520Z[GMT]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2021-06-17T08:18:28.046Z[GMT]")
 
 
 public class GetFoundGeoCodesResponse   {
-  @JsonProperty("geocodeIDs")
+  @JsonProperty("geocodes")
   @Valid
-  private List<UUID> geocodeIDs = null;
+  private List<GeoCode> geocodes = null;
 
-  public GetFoundGeoCodesResponse geocodeIDs(List<UUID> geocodeIDs) {
-    this.geocodeIDs = geocodeIDs;
+  public GetFoundGeoCodesResponse geocodes(List<GeoCode> geocodes) {
+    this.geocodes = geocodes;
     return this;
   }
 
-  public GetFoundGeoCodesResponse addGeocodeIDsItem(UUID geocodeIDsItem) {
-    if (this.geocodeIDs == null) {
-      this.geocodeIDs = new ArrayList<UUID>();
+  public GetFoundGeoCodesResponse addGeocodesItem(GeoCode geocodesItem) {
+    if (this.geocodes == null) {
+      this.geocodes = new ArrayList<GeoCode>();
     }
-    this.geocodeIDs.add(geocodeIDsItem);
+    this.geocodes.add(geocodesItem);
     return this;
   }
 
   /**
-   * Get geocodeIDs
-   * @return geocodeIDs
+   * Get geocodes
+   * @return geocodes
    **/
   @Schema(description = "")
       @Valid
-    public List<UUID> getGeocodeIDs() {
-    return geocodeIDs;
+    public List<GeoCode> getGeocodes() {
+    return geocodes;
   }
 
-  public void setGeocodeIDs(List<UUID> geocodeIDs) {
-    this.geocodeIDs = geocodeIDs;
+  public void setGeocodes(List<GeoCode> geocodes) {
+    this.geocodes = geocodes;
   }
 
 
@@ -60,12 +58,12 @@ public class GetFoundGeoCodesResponse   {
       return false;
     }
     GetFoundGeoCodesResponse getFoundGeoCodesResponse = (GetFoundGeoCodesResponse) o;
-    return Objects.equals(this.geocodeIDs, getFoundGeoCodesResponse.geocodeIDs);
+    return Objects.equals(this.geocodes, getFoundGeoCodesResponse.geocodes);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(geocodeIDs);
+    return Objects.hash(geocodes);
   }
 
   @Override
@@ -73,7 +71,7 @@ public class GetFoundGeoCodesResponse   {
     StringBuilder sb = new StringBuilder();
     sb.append("class GetFoundGeoCodesResponse {\n");
     
-    sb.append("    geocodeIDs: ").append(toIndentedString(geocodeIDs)).append("\n");
+    sb.append("    geocodes: ").append(toIndentedString(geocodes)).append("\n");
     sb.append("}");
     return sb.toString();
   }
