# swagger.yaml
@@ -119,33 +119,33 @@ paths:
       security:
         - bearerAuth: []
         
-  /User/getFoundCollectableTypes:
+  /User/getFoundCollectables:
     post:
       tags:
         - "User"
-      summary: "Gets the Collectable Types that the user has ever found"
-      description: "Get a user's found Collectable Types"
-      operationId: "getFoundCollectableTypes"
+      summary: "Gets the Collectables that the user has ever found"
+      description: "Get a user's found Collectables"
+      operationId: "getFoundCollectables"
       requestBody:
         required: true
-        description: "Request to get the IDs of the user's found Collectable Types"
+        description: "Request to get the user's found Collectables"
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/GetFoundCollectableTypesRequest'
+              $ref: '#/components/schemas/GetFoundCollectablesRequest'
           application/xml:
             schema:
-              $ref: '#/components/schemas/GetFoundCollectableTypesRequest'
+              $ref: '#/components/schemas/GetFoundCollectablesRequest'
       responses:
         '200':
           description: "Successfully returned the user's found collectables"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetFoundCollectableTypesResponse'
+                $ref: '#/components/schemas/GetFoundCollectablesResponse'
             application/xml:
               schema:
-                $ref: '#/components/schemas/GetFoundCollectableTypesResponse'
+                $ref: '#/components/schemas/GetFoundCollectablesResponse'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
       security:
@@ -1614,7 +1614,7 @@ components:
       xml:
         name: "UpdateLocationResponse"
         
-    GetFoundCollectableTypesRequest:
+    GetFoundCollectablesRequest:
       type: "object"
       required:
         - userID
@@ -1625,14 +1625,13 @@ components:
       xml:
         name: "GetFoundCollectablesRequest"
         
-    GetFoundCollectableTypesResponse:
+    GetFoundCollectablesResponse:
       type: "object"
       properties:
-        collectableTypeIDs:
+        collectables:
           type: array
           items:
-            type: string
-            format: uuid
+            $ref: '#/components/schemas/Collectable'
       xml:
         name: "GetFoundCollectablesResponse"
         
@@ -1650,11 +1649,10 @@ components:
     GetFoundGeoCodesResponse:
       type: "object"
       properties:
-        geocodeIDs:
+        geocodes:
           type: array
           items:
-            type: string
-            format: uuid
+            $ref: '#/components/schemas/GeoCode'
       xml:
         name: "GetFoundGeoCodesResponse"
             
@@ -1668,15 +1666,13 @@ components:
           format: uuid
       xml:
         name: "GetOwnedGeocodesRequest"
-        
     GetOwnedGeoCodesResponse:
       type: "object"
       properties:
-        geocodeIDs:
+        geocodes:
           type: array
           items:
-            type: string
-            format: uuid
+            $ref: '#/components/schemas/GeoCode'
       xml:
         name: "GetOwnedGeocodesResponse"
         
